--- a/config/model/jd_unc_attn_unet_50M.yaml
+++ b/config/model/jd_unc_attn_unet_50M.yaml
@@ -1,7 +1,7 @@
+_target_: src.model.jukebox_diffusion.UnconditionalJukeboxDiffusion
+jukebox_embedding_lvl: 2
 model:
-  _target_: src.models.jukebox_diffusion.UnconditionalJukeboxDiffusion
-  model:
-    _target_: src.module.diffusion_attn_unet_1d.DiffusionAttnUnet1D
-    io_channels: 64
-    n_attn_layers: 6
-    channel_sizes: [128, 128, 256, 256, 256, 256, 256, 256, 256, 256] # 2*128 + 8*256
+  _target_: src.module.diffusion_attn_unet_1d.DiffusionAttnUnet1D
+  io_channels: 64
+  n_attn_layers: 6
+  channel_sizes: [128, 128, 256, 256, 256, 256, 256, 256, 256, 256] # 2*128 + 8*256
