--- a/config/train.yaml
+++ b/config/train.yaml
@@ -4,8 +4,8 @@
 # order of defaults determines the order in which configs override each other
 defaults:
   - _self_
-  - datamodule: jukebox_dataloader
-  - model: jd_unc_attn_unet
+  - datamodule: jukebox_datamodule
+  - model: jd_unc_attn_unet_50M
   - callbacks: default.yaml
   - logger: null # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
   - trainer: default.yaml
