--- a/requirements.txt
+++ b/requirements.txt
@@ -21,8 +21,8 @@ hydra-optuna-sweeper==1.2.0
 pyrootutils     # standardizing the project root setup
 rich            # beautiful text formatting in terminal
 pytest          # tests
-# sh            # for running bash commands in some tests (linux/macos only)
-
-# --------- dev --------- #
-soundfile
-pandas
+soundfile       # reading and writing audio files
+pandas          # dataframes
+tqdm
+diffusers
+transformers
