--- a/config/experiment/maestro_upsample_lvl2.yaml
+++ b/config/experiment/maestro_upsample_lvl2.yaml
@@ -17,8 +17,7 @@ seed: 100
 
 trainer:
   log_every_n_steps: 10
-  check_val_every_n_epoch: 10
-  accumulate_grad_batches: 4
+  accumulate_grad_batches: 2
   # profiler: 
   #   _target_: pytorch_lightning.profiler.AdvancedProfiler
   #   dirpath: "/usr/stud/steiger/dev/jukebox_diffusion"
@@ -28,7 +27,8 @@ trainer:
 datamodule:
   root_dir: ${oc.env:MAESTRO_DATASET_DIR}
   num_workers: 10
-  batch_size: 8
+  batch_size: 10
+  sample_length: 131072 # 1.5s
 
 model:
   source_lvl: 2
