--- a/config/experiment/maestro_precond_lvl2.yaml
+++ b/config/experiment/maestro_precond_lvl2.yaml
@@ -10,20 +10,21 @@ defaults:
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
 
-tags: ["maestro", "jukebox", "lvl2", "unconditional"]
+tags: ["maestro", "jukebox", "lvl2", "precond"]
 
 seed: 100
 
 trainer:
   log_every_n_steps: 10
   gradient_clip_val: 1
-  accumulate_grad_batches: 4
+  accumulate_grad_batches: 2
 
 datamodule:
   root_dir: ${oc.env:MAESTRO_DATASET_DIR}
   num_workers: 8
-  batch_size: 32
+  batch_size: 24
   sample_length: 524288  # ~11.8s
+  pin_memory: true
 
 model:
   target_lvl: 2
@@ -35,7 +36,8 @@ model:
     channel_sizes: [128, 128, 128, 128,  256, 256, 256, 256,  512, 512, 512]
   lr: 1e-4
   lr_warmup_steps: 2000
-  inference_batch_size: 8
+  num_train_timesteps: 10
+  inference_batch_size: 4
   noise_scheduler:
     _target_: diffusers.PNDMScheduler
     num_train_timesteps: 1000
@@ -43,11 +45,14 @@ model:
     beta_end: 0.02
     beta_schedule: linear
   timestep_sampler:
-    _target_: src.diffusion.timestep_sampler.TimeConstantSampler
+    _target_: src.diffusion.timestep_sampler.PartialSampler
     max_timestep: 1000
+    start_fraction: 0.5
+    end_fraction: 1
   num_inference_steps: 80
-  generate_unconditional: true
-  generate_continuation: false
+  generate_unconditional: false
+  generate_continuation: true
+  log_train_audio: true
   skip_audio_logging: false
 
 
