--- a/config/trainer/gpu.yaml
+++ b/config/trainer/gpu.yaml
@@ -3,3 +3,7 @@ defaults:
 
 accelerator: gpu
 devices: 1
+# plugins: 
+#   - _target_: pytorch_lightning.plugins.environments.SLURMEnvironment
+#     auto_requeue: true
+#     requeue_signal: SIGUSR1
