--- a/config/experiment/maestro_unc_lvl1_unet.yaml
+++ b/config/experiment/maestro_unc_lvl1_unet.yaml
@@ -17,7 +17,6 @@ seed: 103
 trainer:
   log_every_n_steps: 10
   gradient_clip_val: 1.0
-  accumulate_grad_batches: 4
 
 datamodule:
   root_dir: ${oc.env:MAESTRO_DATASET_DIR}
@@ -34,15 +33,16 @@ model:
     n_attn_layers: 6
     channel_sizes: [128, 128, 128, 128, 256, 256, 256, 256, 512, 512]
   lr: 1e-4
-  lr_warmup_steps: 256
+  lr_warmup_steps: 100
   inference_batch_size: 16
   noise_scheduler:
     _target_: diffusers.DDIMScheduler
     num_train_timesteps: 1000
-    beta_start: 1e-4
+    beta_start: 1.e-4
     beta_end: 0.02
     beta_schedule: linear
-    clip_sample: False
+    clip_sample: true
+    prediction_type: epsilon
   timestep_sampler:
     _target_: src.diffusion.timestep_sampler.TimeConstantSampler
     max_timestep: 1000
