--- a/config/experiment/maestro_unc_lvl1_unet.yaml
+++ b/config/experiment/maestro_unc_lvl1_unet.yaml
@@ -17,11 +17,12 @@ seed: 103
 trainer:
   log_every_n_steps: 10
   gradient_clip_val: 1.0
+  accumulate_grad_batches: 2
 
 datamodule:
   root_dir: ${oc.env:MAESTRO_DATASET_DIR}
   num_workers: 6
-  batch_size: 38
+  batch_size: 32
   sample_length: 131072  # ~3s
 
 model:
@@ -30,22 +31,24 @@ model:
     # 96Mil params
     _target_: src.module.diffusion_attn_unet_1d.DiffusionAttnUnet1D
     io_channels: 64
-    n_attn_layers: 6
-    channel_sizes: [128, 128, 128, 128, 256, 256, 256, 256, 512, 512]
-  lr: 1e-4
-  lr_warmup_steps: 100
+    n_attn_layers: 7
+    channel_sizes: [128, 128, 128, 128, 256, 256, 256, 256, 512, 512, 512]
+    timestep_max: 1000
+  lr: 8e-5
+  lr_warmup_steps: 500
   inference_batch_size: 16
   noise_scheduler:
-    _target_: diffusers.DDIMScheduler
+    _target_: diffusers.DPMSolverMultistepScheduler
     num_train_timesteps: 1000
-    beta_start: 1.e-4
+    beta_start: 0.0001
     beta_end: 0.02
     beta_schedule: linear
+    solver_order: 3
     prediction_type: epsilon
   timestep_sampler:
     _target_: src.diffusion.timestep_sampler.TimeConstantSampler
     max_timestep: 1000
-  num_inference_steps: 125
+  num_inference_steps: 120
   generate_unconditional: true
   generate_continuation: false
   skip_audio_logging: false
