--- a/config/experiment/maestro_unc_lvl2_sgconv.yaml
+++ b/config/experiment/maestro_unc_lvl2_sgconv.yaml
@@ -12,33 +12,31 @@ defaults:
 
 tags: ["maestro", "jukebox", "lvl2", "unconditional"]
 
-seed: 101
+seed: 42
 
 trainer:
-  log_every_n_steps: 10
-  gradient_clip_val: 1
-  accumulate_grad_batches: 4
+  _convert_: "all"
+  log_every_n_steps: 5
 
 datamodule:
   root_dir: ${oc.env:MAESTRO_DATASET_DIR}
   num_workers: 4
-  batch_size: 16
-  sample_length: 131072
+  batch_size: 36
+  sample_length: 524288
 
 model:
-  target_lvl: 1
+  target_lvl: 2
   model:
     _target_: src.module.sgconv.GConvStackedDiffusion
-    input_data_dim: 64
-    channels: 32
-    bidirectional: true
-    dropout: 0.01
-    n_layers: 16
+    input_dim: 64
     time_emb_dim: 32
+    model_dim: 128
+    channels: 16
+    depth: 5
     timestep_max_index: 1000
   lr: 1e-4
-  lr_warmup_steps: 200
-  inference_batch_size: 4
+  lr_warmup_steps: 250
+  inference_batch_size: 16
   noise_scheduler:
     _target_: diffusers.DPMSolverMultistepScheduler
     num_train_timesteps: 1000
@@ -46,12 +44,12 @@ model:
     beta_end: 0.02
     beta_schedule: linear
     solver_order: 3
-    prediction_type: "sample"
-  normalizer_path: "config/normalizations/maestro_val_lvl_1.pt"
+    prediction_type: sample
+  normalizer_path: "config/normalizations/maestro_train_lvl_2.pt"
   timestep_sampler:
     _target_: src.diffusion.timestep_sampler.TimeConstantSampler
     max_timestep: 1000
-  num_inference_steps: 100
+  num_inference_steps: 50
   generate_unconditional: true
   generate_continuation: false
   log_train_audio: true
