--- a/config/experiment/acapella_lvl2.yaml
+++ b/config/experiment/acapella_lvl2.yaml
@@ -50,11 +50,15 @@ model:
   timestep_sampler:
     _target_: src.diffusion.timestep_sampler.TimeConstantSampler
     max_timestep: 1000
-  num_inference_steps: 50
+  num_inference_steps: 80
   generate_unconditional: true
   generate_continuation: false
   log_train_audio: true
   skip_audio_logging: false
+  conditionings:
+    gender: ["","Female","Male"]
+    language: ["","English","Italian","Persian","Spanish"]
+    singer: [""]
 
 
 logger:
