--- a/config/experiment/maestro_lvl0.yaml
+++ b/config/experiment/maestro_lvl0.yaml
@@ -17,8 +17,8 @@ seed: 440
 datamodule:
   root_dir: ${oc.env:MAESTRO_DATASET_DIR}
   num_workers: 4
-  batch_size: 10
-  sample_length: 131072
+  batch_size: 22
+  sample_length: 262144
 
 model:
   target_lvl: 0
@@ -26,13 +26,14 @@ model:
     _target_: src.module.sgconv.GConvStackedDiffusion
     input_dim: 64
     time_emb_dim: 32
-    model_dim: 128
-    channels: 16
-    depth: 5
+    model_dim: 48
+    channels: 8
+    depth: 10
     timestep_max_index: 1000
+    l_max: 32768
   lr: 1e-4
-  lr_warmup_steps: 1000
-  max_epochs: 100
+  lr_warmup_steps: 5
+  lr_cycle_steps: 100
   inference_batch_size: 16
   noise_scheduler:
     _target_: diffusers.DPMSolverMultistepScheduler
