Fix lr schedule and update config

--- a/config/experiment/maestro_lvl2.yaml
+++ b/config/experiment/maestro_lvl2.yaml
@@ -10,30 +10,29 @@ defaults:
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
 
-tags: ["maestro", "lvl0", "unconditional", "run"]
+tags: ["maestro", "jukebox", "lvl2", "unconditional", "run"]
 
-seed: 440
+seed: 432
 
 datamodule:
   root_dir: ${oc.env:MAESTRO_DATASET_DIR}
   num_workers: 4
-  batch_size: 22
+  batch_size: 80
   sample_length: 262144
 
 model:
-  target_lvl: 0
+  target_lvl: 1
   model:
     _target_: src.module.sgconv.GConvStackedDiffusion
     input_dim: 64
     time_emb_dim: 32
-    model_dim: 48
+    model_dim: 64
     channels: 8
     depth: 10
     timestep_max_index: 1000
-    l_max: 32768
   lr: 1e-4
-  lr_warmup_steps: 1_000
-  lr_cycle_steps: 100_000
+  lr_warmup_steps: 1000
+  max_epochs: 500
   inference_batch_size: 16
   noise_scheduler:
     _target_: diffusers.DPMSolverMultistepScheduler
@@ -43,7 +42,7 @@ model:
     beta_schedule: linear
     solver_order: 3
     prediction_type: sample
-  normalizer_path: "normalizations/maestro_lvl_0.pt"
+  normalizer_path: "normalizations/maestro_val_lvl_1.pt"
   timestep_sampler:
     _target_: src.diffusion.timestep_sampler.TimeConstantSampler
     max_timestep: 1000
@@ -58,6 +57,6 @@ logger:
   wandb:
     project: "jukebox_diffusion"
     tags: ${tags}
-    name: "uncond_lvl0"
+    name: "uncond_lvl2"
   tensorboard:
     name: "jukebox_diffusion"
