--- a/config/experiment/maestro_lvl1.yaml
+++ b/config/experiment/maestro_lvl1.yaml
@@ -10,14 +10,14 @@ defaults:
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
 
-tags: ["maestro", "jukebox", "lvl2", "unconditional", "run"]
+tags: ["maestro", "jukebox", "lvl1", "unconditional", "run"]
 
 seed: 43
 
 datamodule:
   root_dir: ${oc.env:MAESTRO_DATASET_DIR}
   num_workers: 4
-  batch_size: 20
+  batch_size: 60
   sample_length: 262144
 
 model:
@@ -26,12 +26,14 @@ model:
     _target_: src.module.sgconv.GConvStackedDiffusion
     input_dim: 64
     time_emb_dim: 32
-    model_dim: 128
-    channels: 16
-    depth: 5
+    model_dim: 64
+    channels: 8
+    depth: 10
     timestep_max_index: 1000
+    l_max: 8_192
   lr: 1e-4
-  lr_warmup_steps: 1000
+  lr_warmup_steps: 1_000
+  lr_cycle_steps: 100_000
   inference_batch_size: 16
   noise_scheduler:
     _target_: diffusers.DPMSolverMultistepScheduler
@@ -41,7 +43,7 @@ model:
     beta_schedule: linear
     solver_order: 3
     prediction_type: sample
-  normalizer_path: "normalizations/maestro_val_lvl_1.pt"
+  normalizer_path: "normalizations/maestro_lvl_1.pt"
   timestep_sampler:
     _target_: src.diffusion.timestep_sampler.TimeConstantSampler
     max_timestep: 1000
