--- a/config/experiment/maestro_lvl0.yaml
+++ b/config/experiment/maestro_lvl0.yaml
@@ -12,7 +12,7 @@ defaults:
 
 tags: ["maestro", "lvl0", "unconditional", "run"]
 
-seed: 440
+seed: 443
 
 datamodule:
   root_dir: ${oc.env:MAESTRO_DATASET_DIR}
@@ -30,7 +30,7 @@ model:
     channels: 8
     depth: 10
     timestep_max_index: 1000
-    l_max: 32768
+    l_max: 32_768
   lr: 1e-4
   lr_warmup_steps: 1_000
   lr_cycle_steps: 100_000
