Add unc_lvl2 config

--- a/config/experiment/maestro_lvl2.yaml
+++ b/config/experiment/maestro_lvl2.yaml
@@ -1,7 +1,5 @@
 # @package _global_
 
-# maestro_unconditional_lvl2_unet_100M.yaml
-
 defaults:
   - override /callbacks: default.yaml
   - override /trainer: default.yaml
@@ -10,14 +8,24 @@ defaults:
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
 
-tags: ["maestro", "jukebox", "lvl2", "unconditional", "run"]
+tags: ["run"]
 
-seed: 1001
+seed: 500
+
+
+hydra:
+  run:
+    dir: ${paths.log_dir}/${task_name}/runs/uncond_lvl2
+
+ckpt_path: ${paths.output_dir}/checkpoints/last.ckpt
+
+trainer:
+  max_steps: 120_000
 
 datamodule:
   root_dir: ${oc.env:MAESTRO_DATASET_DIR}
   num_workers: 4
-  batch_size: 92
+  batch_size: 128
   sample_length: 524288
 
 model:
@@ -27,14 +35,14 @@ model:
     input_dim: 64
     time_emb_dim: 32
     model_dim: 64
-    channels: 8
-    depth: 10
+    channels: 1
+    depth: 8
     timestep_max_index: 1000
-    l_max: 8_192
+    l_max: 4096
   lr: 1e-4
   lr_warmup_steps: 1000
-  lr_cycle_steps: 100_000
-  inference_batch_size: 16
+  lr_cycle_steps: 120_000
+  inference_batch_size: 8
   noise_scheduler:
     _target_: diffusers.DPMSolverMultistepScheduler
     num_train_timesteps: 1000
@@ -59,5 +67,6 @@ logger:
     project: "jukebox_diffusion"
     tags: ${tags}
     name: "uncond_lvl2"
+    id: "uncond_lvl2"
   tensorboard:
     name: "jukebox_diffusion"
