--- a/config/experiment/up_lvl2.yaml
+++ b/config/experiment/up_lvl2.yaml
@@ -11,15 +11,24 @@ defaults:
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
 
-tags: ["maestro", "jukebox", "lvl2", "upsample", "run"] # TODO
+tags: ["run"]
 
-seed: 21
+hydra:
+  run:
+    dir: ${paths.log_dir}/${task_name}/runs/up_lvl2
+
+ckpt_path: ${paths.output_dir}/checkpoints/last.ckpt
+
+seed: 501
+
+trainer:
+  max_steps: 120_000
 
 datamodule:
   root_dir: ${oc.env:MAESTRO_DATASET_DIR}
   num_workers: 4
-  batch_size: 80
-  sample_length: 131072
+  batch_size: 64
+  sample_length: 524288
 
 model:
   source_lvl: 2
@@ -28,17 +37,16 @@ model:
     _target_: src.module.sgconv.GConvStackedDiffusion
     input_dim: 64
     time_emb_dim: 32
-    cond_dim: 64
-    model_dim: 96
-    channels: 8
+    model_dim: 64
+    channels: 1
     depth: 8
     timestep_max_index: 1000
-    l_max: 16384
+    l_max: 16_384
   lr: 1e-4
   lr_warmup_steps: 1_000
-  lr_cycle_steps: 100_000
+  lr_cycle_steps: 120_000
   num_train_timesteps: 1000
-  inference_batch_size: 16
+  inference_batch_size: 8
   noise_scheduler:
     _target_: diffusers.DPMSolverMultistepScheduler
     num_train_timesteps: 1000
@@ -48,7 +56,7 @@ model:
     solver_order: 3
     prediction_type: sample
   num_inference_steps: 50
-  source_noise_std: 1.0
+  source_aug_noise_std: 1.0
   source_dropout: 0.0
   guidance_scales: [1]
   source_normalizer_path: "normalizations/maestro_lvl_2.pt"
@@ -58,12 +66,14 @@ model:
     max_timestep: 1000
   skip_audio_logging: false
   log_train_audio: true
+  clip_embeddings: true
 
 
 logger:
   wandb:
     project: "jukebox_diffusion"
     tags: ${tags}
-    name: "upsample_lvl2"
+    name: "up_lvl2"
+    id: "up_lvl2"
   tensorboard:
     name: "jukebox_diffusion"
