--- a/config/debug/gpu.yaml
+++ b/config/debug/gpu.yaml
@@ -7,7 +7,6 @@
 task_name: "debug"
 
 # disable callbacks and loggers during debugging
-callbacks: null
 logger: null
 
 extras:
@@ -26,14 +25,10 @@ hydra:
 
 trainer:
   max_epochs: 1
-  accelerator: cpu # debuggers don't like gpus
+  accelerator: gpu # debuggers don't like gpus
   devices: 1 # debuggers don't like multiprocessing
   detect_anomaly: true # raise exception if NaN or +/-inf is detected in any tensor
 
 datamodule:
   num_workers: 0 # debuggers don't like multiprocessing
   pin_memory: False # disable gpu memory pin
-
-logger:
-  wandb:
-    id: null
