--- a/config/experiment/up_lvl2.yaml
+++ b/config/experiment/up_lvl2.yaml
@@ -36,6 +36,7 @@ model:
   model:
     _target_: src.module.sgconv.GConvStackedDiffusion
     input_dim: 64
+    cond_dim: 64
     time_emb_dim: 32
     model_dim: 64
     channels: 1
