--- a/config/experiment/up_lvl1.yaml
+++ b/config/experiment/up_lvl1.yaml
@@ -31,10 +31,9 @@ datamodule:
 model:
 target_lvl: 0
   model:
-    # target params (jukebox small prior): 161_862_656
-    # current params: 176M
     _target_: src.module.sgconv.GConvStackedDiffusion
     input_dim: 64
+    cond_dim: 64
     time_emb_dim: 32
     model_dim: 64
     channels: 1
