Log every 10k steps

--- a/config/callbacks/default.yaml
+++ b/config/callbacks/default.yaml
@@ -5,11 +5,12 @@ defaults:
 
 model_checkpoint:
   dirpath: ${paths.output_dir}/checkpoints
-  filename: "epoch_{epoch:03d}"
+  filename: "step_{step:06d}"
   monitor: "val/loss"
   mode: "min"
   save_last: True
   auto_insert_metric_name: False
+  every_n_train_steps: 10_000
 
 model_summary:
   max_depth: 4
