Check val less often for unc 1 & 2

--- a/config/experiment/maestro_lvl1.yaml
+++ b/config/experiment/maestro_lvl1.yaml
@@ -20,6 +20,7 @@ hydra:
 ckpt_path: ${paths.output_dir}/checkpoints/last.ckpt
 
 trainer:
+  check_val_every_n_epoch: 10
   max_steps: 200_000
 
 datamodule:
